testsuite/serd-tests/bad/bad-nt-syntax-uri-double-quotes.nt
# Bad IRI : double quotes.
<http://example/"quoted"> <http://example/p> <http://example/o> .
